# ChessLibrary

./: .gitignore  Cargo.toml
.cargo/: config.toml
chesslibrary/: magic
chesslibrary/src/: bitboard.rs  board.rs  colour.rs  game.rs  lib.rs  magic.rs  main.rs  mod.rs  movegen.rs  mv.rs  role.rs  square.rs
src/: bitboard.rs  board.rs  castle.rs  colour.rs  fen.rs  lib.rs  magic.rs  main.rs  movegen.rs  mv.rs  perft.rs  role.rs  square.rs  uci.rs
src/engine/: eval.rs  search.rs
