[package]
name = "chesslibrary"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] } ##For using rust functions in python
arrayvec = "0.7.6"
once_cell = "1.21.3" ##For atomic node counting

[profile.dev]

[lib]
name = "chesslibrary"
crate-type = ["cdylib", "rlib"]