[package]
name = "chesslibrary"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7.6"
once_cell = "1.21.3" ##For atomic node counting
pyo3 = "0.25.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.dev]

[lib]
name = "chesslibrary"
crate-type = ["cdylib", "rlib"]
